Reorganize project structure for Next.js and add 1080x1440 format
- Move addons folder to public/addons for proper static serving
- Fix index.tsx to include addons variable
- Add 1080x1440px format option to post-slice-grid addon
- Remove inline script tags (hydration issues)
- Create _app.tsx for global CSS management

--- a/public/addons/post-slice-grid/index.html
+++ b/public/addons/post-slice-grid/index.html
@@ -47,6 +47,7 @@
             <label for="aspectRatio">Formato do Post:</label>
             <select id="aspectRatio">
                 <option value="1080/1350" data-width="1080" data-height="1350">Retrato (4:5) → 1080x1350 px</option>
+                <option value="1080/1440" data-width="1080" data-height="1440">Retrato Longo (3:4) → 1080x1440 px</option>
                 <option value="1080/1080" data-width="1080" data-height="1080">Quadrado (1:1) → 1080x1080 px</option>
                 <option value="1080/566" data-width="1080" data-height="566">Paisagem (1.91:1) → 1080x566 px</option>
             </select>
