ui: melhorar UX do bloco Subtarefas (visão)  tabela mais larga, estilos e span full-width

--- a/public/addons/divisor-de-objetivos/index.html
+++ b/public/addons/divisor-de-objetivos/index.html
@@ -32,7 +32,7 @@
         </div>
       </section>
 
-      <section class="block">
+      <section class="block full">
         <h2>Subtarefas (Visão)</h2>
         <div id="subtasks-table-container" class="table-wrap"></div>
       </section>
